@startuml Domain

class ModelInfo{
	modelId: string
	modelUrl: string
	modelName: string
	isPublished: boolean
	internalUserId: string
}

class User{
	userId: string
	password: string
	internalUserId: string
}

class ViewUser{
	viewUserId: string
	password: string
	expireDate: date
	isEnable: boolean
}

ModelInfo "0..n" --> "0..1" User
ViewUser "0..n" --* "1" User

note left of ModelInfo: ・isPublishedは公開・非公開ステータスで、公開からスタートする
note left of User: ・userIdはログインにのみ使用し、モデルとの対応はinternalUserIdを使用する\n・internalUserIdは乱数で生成する

@enduml